/* tslint:disable */
/* eslint-disable */
/**
 * API Specification
 * クライアント-サーバー間のデータ通信仕様
 *
 * The version of the OpenAPI document: 0.4.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */

import { exists, mapValues } from '../runtime';
import {
    InspectionItem,
    InspectionItemFromJSON,
    InspectionItemFromJSONTyped,
    InspectionItemToJSON,
} from './';

/**
 * 
 * @export
 * @interface Equipment
 */
export interface Equipment {
    /**
     * 
     * @type {number}
     * @memberof Equipment
     */
    equipment_id: number;
    /**
     * 
     * @type {number}
     * @memberof Equipment
     */
    order_index: number;
    /**
     * 
     * @type {string}
     * @memberof Equipment
     */
    equipment_name: string;
    /**
     * 
     * @type {Array<InspectionItem>}
     * @memberof Equipment
     */
    inspection_items: Array<InspectionItem>;
}

export function EquipmentFromJSON(json: any): Equipment {
    return EquipmentFromJSONTyped(json, false);
}

export function EquipmentFromJSONTyped(json: any, ignoreDiscriminator: boolean): Equipment {
    if ((json === undefined) || (json === null)) {
        return json;
    }
    return {
        
        'equipment_id': json['equipment_id'],
        'order_index': json['order_index'],
        'equipment_name': json['equipment_name'],
        'inspection_items': ((json['inspection_items'] as Array<any>).map(InspectionItemFromJSON)),
    };
}

export function EquipmentToJSON(value?: Equipment | null): any {
    if (value === undefined) {
        return undefined;
    }
    if (value === null) {
        return null;
    }
    return {
        
        'equipment_id': value.equipment_id,
        'order_index': value.order_index,
        'equipment_name': value.equipment_name,
        'inspection_items': ((value.inspection_items as Array<any>).map(InspectionItemToJSON)),
    };
}


