import { Option } from "./Option";

export type ChoiceTemplate = {
  choiceTemplateId: number;
  choices: Array<Option>;
};
