export type InspectionGroup = {
  inspectionGroupId: number;
  description: string;
};
