export type InspectionType = {
  inspectionTypeId: number;
  description: string;
};
